@@ -3,6 +3,7 @@ package net.sourceforge.kolmafia.utilities;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -17,17 +18,17 @@ import java.util.regex.Pattern;
 import net.sourceforge.kolmafia.RequestLogger;
 
 public class StringUtilities {
-  private static final HashMap<String, String> entityEncodeCache = new HashMap<String, String>();
-  private static final HashMap<String, String> entityDecodeCache = new HashMap<String, String>();
+  private static final HashMap<String, String> entityEncodeCache = new HashMap<>();
+  private static final HashMap<String, String> entityDecodeCache = new HashMap<>();
 
-  private static final HashMap<String, String> urlEncodeCache = new HashMap<String, String>();
-  private static final HashMap<String, String> urlDecodeCache = new HashMap<String, String>();
+  private static final HashMap<String, String> urlEncodeCache = new HashMap<>();
+  private static final HashMap<String, String> urlDecodeCache = new HashMap<>();
 
-  private static final HashMap<String, String> displayNameCache = new HashMap<String, String>();
-  private static final HashMap<String, String> canonicalNameCache = new HashMap<String, String>();
+  private static final HashMap<String, String> displayNameCache = new HashMap<>();
+  private static final HashMap<String, String> canonicalNameCache = new HashMap<>();
 
-  private static final HashMap<String, String> prepositionsMap = new HashMap<String, String>();
-  private static final WeakHashMap<String[], int[]> hashCache = new WeakHashMap<String[], int[]>();
+  private static final HashMap<String, String> prepositionsMap = new HashMap<>();
+  private static final WeakHashMap<String[], int[]> hashCache = new WeakHashMap<>();
 
   private static final Pattern NONINTEGER_PATTERN = Pattern.compile("[^0-9\\-]+");
 
@@ -47,21 +48,22 @@ public class StringUtilities {
 
   private StringUtilities() {}
 
-  public static final synchronized long parseDate(final String dateString) {
+  public static synchronized long parseDate(final String dateString) {
     if (dateString != null) {
       try {
         return StringUtilities.DATE_FORMAT.parse(dateString).getTime();
       } catch (Exception e) {
+        return 0;
       }
     }
     return 0;
   }
 
-  public static final String formatDate(final long date) {
+  public static String formatDate(final long date) {
     return StringUtilities.formatDate(new Date(date));
   }
 
-  public static final synchronized String formatDate(final Date date) {
+  public static synchronized String formatDate(final Date date) {
     try {
       return StringUtilities.DATE_FORMAT.format(date);
     } catch (Exception e) {
@@ -69,7 +71,7 @@ public class StringUtilities {
     }
   }
 
-  public static final String getEncodedString(final byte[] bytes, final String encoding) {
+  public static String getEncodedString(final byte[] bytes, final String encoding) {
     try {
       return new String(bytes, encoding);
     } catch (UnsupportedEncodingException e) {
@@ -77,7 +79,7 @@ public class StringUtilities {
     }
   }
 
-  public static final byte[] getEncodedBytes(final String string, final String encoding) {
+  public static byte[] getEncodedBytes(final String string, final String encoding) {
     try {
       return string.getBytes(encoding);
     } catch (UnsupportedEncodingException e) {
@@ -86,11 +88,11 @@ public class StringUtilities {
   }
 
   /** Returns the encoded-encoded version of the provided UTF-8 string. */
-  public static final String getEntityEncode(final String utf8String) {
+  public static String getEntityEncode(final String utf8String) {
     return StringUtilities.getEntityEncode(utf8String, true);
   }
 
-  public static final String getEntityEncode(String utf8String, final boolean cache) {
+  public static String getEntityEncode(String utf8String, final boolean cache) {
     if (utf8String == null) {
       return utf8String;
     }
@@ -121,11 +123,11 @@ public class StringUtilities {
   }
 
   /** Returns the UTF-8 version of the provided character entity string. */
-  public static final String getEntityDecode(final String entityString) {
+  public static String getEntityDecode(final String entityString) {
     return StringUtilities.getEntityDecode(entityString, true);
   }
 
-  public static final String getEntityDecode(String entityString, final boolean cache) {
+  public static String getEntityDecode(String entityString, final boolean cache) {
     if (entityString == null) {
       return entityString;
     }
@@ -148,7 +150,7 @@ public class StringUtilities {
   }
 
   /** Returns the URL-encoded version of the provided URL string. */
-  public static final String getURLEncode(final String url) {
+  public static String getURLEncode(final String url) {
     if (url == null) {
       return url;
     }
@@ -156,11 +158,7 @@ public class StringUtilities {
     String encodedURL = StringUtilities.urlEncodeCache.get(url);
 
     if (encodedURL == null) {
-      try {
-        encodedURL = URLEncoder.encode(url, "UTF-8");
-      } catch (UnsupportedEncodingException e) {
-        encodedURL = url;
-      }
+      encodedURL = URLEncoder.encode(url, StandardCharsets.UTF_8);
 
       StringUtilities.urlEncodeCache.put(url, encodedURL);
     }
@@ -169,7 +167,7 @@ public class StringUtilities {
   }
 
   /** Returns the URL-decoded version of the provided URL string. */
-  public static final String getURLDecode(final String url) {
+  public static String getURLDecode(final String url) {
     if (url == null) {
       return url;
     }
@@ -177,11 +175,7 @@ public class StringUtilities {
     String encodedURL = StringUtilities.urlDecodeCache.get(url);
 
     if (encodedURL == null) {
-      try {
-        encodedURL = URLDecoder.decode(url, "UTF-8");
-      } catch (UnsupportedEncodingException e) {
-        encodedURL = url;
-      }
+      encodedURL = URLDecoder.decode(url, StandardCharsets.UTF_8);
 
       StringUtilities.urlDecodeCache.put(url, encodedURL);
     }
@@ -190,7 +184,7 @@ public class StringUtilities {
   }
 
   /** Returns the display name for the provided canonical name. */
-  public static final String getDisplayName(String name) {
+  public static String getDisplayName(String name) {
     if (name == null) {
       return name;
     }
@@ -206,7 +200,7 @@ public class StringUtilities {
   }
 
   /** Returns the canonicalized name for the provided display name. */
-  public static final String getCanonicalName(String name) {
+  public static String getCanonicalName(String name) {
     if (name == null) {
       return null;
     }
@@ -229,7 +223,7 @@ public class StringUtilities {
    * @param names The map in which to search for the string
    * @param searchString The substring for which to search
    */
-  public static final List<String> getMatchingNames(final String[] names, String searchString) {
+  public static List<String> getMatchingNames(final String[] names, String searchString) {
     if (searchString == null) {
       searchString = "";
     }
@@ -237,7 +231,7 @@ public class StringUtilities {
     searchString = searchString.trim();
 
     boolean isExactMatch = searchString.startsWith("\"");
-    List<String> matchList = new ArrayList<String>();
+    List<String> matchList = new ArrayList<>();
 
     if (isExactMatch) {
       String fullString = StringUtilities.getCanonicalName(searchString);
@@ -322,7 +316,7 @@ public class StringUtilities {
     return hash;
   }
 
-  public static final boolean substringMatches(
+  public static boolean substringMatches(
       final String source, final String substring, final boolean checkBoundaries) {
     if (source == null) {
       return false;
@@ -344,7 +338,7 @@ public class StringUtilities {
     return !Character.isLetterOrDigit(source.charAt(index - 1));
   }
 
-  public static final boolean fuzzyMatches(final String sourceString, final String searchString) {
+  public static boolean fuzzyMatches(final String sourceString, final String searchString) {
     if (sourceString == null) {
       return false;
     }
@@ -406,7 +400,7 @@ public class StringUtilities {
     return ch != '#' && !Character.isLetterOrDigit(ch);
   }
 
-  public static final void insertBefore(
+  public static void insertBefore(
       final StringBuffer buffer, final String searchString, final String insertString) {
     int searchIndex = buffer.indexOf(searchString);
     if (searchIndex == -1) {
@@ -416,7 +410,7 @@ public class StringUtilities {
     buffer.insert(searchIndex, insertString);
   }
 
-  public static final void insertAfter(
+  public static void insertAfter(
       final StringBuffer buffer, final String searchString, final String insertString) {
     int searchIndex = buffer.indexOf(searchString);
     if (searchIndex == -1) {
@@ -426,12 +420,12 @@ public class StringUtilities {
     buffer.insert(searchIndex + searchString.length(), insertString);
   }
 
-  public static final String singleStringDelete(
+  public static String singleStringDelete(
       final String originalString, final String searchString) {
     return StringUtilities.singleStringReplace(originalString, searchString, "");
   }
 
-  public static final String singleStringReplace(
+  public static String singleStringReplace(
       final String originalString, final String searchString, final String replaceString) {
     if (originalString == null) {
       return null;
@@ -446,19 +440,17 @@ public class StringUtilities {
       return originalString;
     }
 
-    String buffer =
-        originalString.substring(0, lastIndex)
-            + replaceString
-            + originalString.substring(lastIndex + searchString.length());
-    return buffer;
+    return originalString.substring(0, lastIndex)
+        + replaceString
+        + originalString.substring(lastIndex + searchString.length());
   }
 
-  public static final void singleStringDelete(
+  public static void singleStringDelete(
       final StringBuffer buffer, final String searchString) {
     StringUtilities.singleStringReplace(buffer, searchString, "");
   }
 
-  public static final void singleStringReplace(
+  public static void singleStringReplace(
       final StringBuffer buffer, final String searchString, final String replaceString) {
     int index = buffer.indexOf(searchString);
     if (index != -1) {
@@ -466,12 +458,12 @@ public class StringUtilities {
     }
   }
 
-  public static final String globalStringDelete(
+  public static String globalStringDelete(
       final String originalString, final String searchString) {
     return StringUtilities.globalStringReplace(originalString, searchString, "");
   }
 
-  public static final String globalStringReplace(
+  public static String globalStringReplace(
       final String originalString, final String searchString, final String replaceString) {
     if (originalString == null) {
       return null;
@@ -499,16 +491,16 @@ public class StringUtilities {
     return buffer.toString();
   }
 
-  public static final void globalStringReplace(
+  public static void globalStringReplace(
       final StringBuffer buffer, final String tag, final int replaceWith) {
     StringUtilities.globalStringReplace(buffer, tag, String.valueOf(replaceWith));
   }
 
-  public static final void globalStringDelete(final StringBuffer buffer, final String tag) {
+  public static void globalStringDelete(final StringBuffer buffer, final String tag) {
     StringUtilities.globalStringReplace(buffer, tag, "");
   }
 
-  public static final void globalStringReplace(
+  public static void globalStringReplace(
       final StringBuffer buffer, final String tag, String replaceWith) {
     if (buffer == null) {
       return;
@@ -533,7 +525,7 @@ public class StringUtilities {
     }
   }
 
-  public static final boolean isNumeric(String string) {
+  public static boolean isNumeric(String string) {
     if (string == null || string.isEmpty()) {
       return false;
     }
@@ -555,7 +547,7 @@ public class StringUtilities {
     return true;
   }
 
-  public static final boolean isFloat(String string) {
+  public static boolean isFloat(String string) {
     if (string == null || string.length() == 0) {
       return false;
     }
@@ -589,11 +581,11 @@ public class StringUtilities {
     return true;
   }
 
-  public static final int parseInt(String string) {
+  public static int parseInt(String string) {
     return StringUtilities.parseIntInternal1(string, false);
   }
 
-  public static final int parseIntInternal1(String string, boolean throwException)
+  public static int parseIntInternal1(String string, boolean throwException)
       throws NumberFormatException {
     if (string == null) {
       return 0;
@@ -647,7 +639,7 @@ public class StringUtilities {
     return StringUtilities.parseIntInternal2(string);
   }
 
-  public static final int parseIntInternal2(String string) throws NumberFormatException {
+  public static int parseIntInternal2(String string) throws NumberFormatException {
     string = NONINTEGER_PATTERN.matcher(string).replaceAll("");
 
     if (string.length() == 0) {
@@ -662,11 +654,11 @@ public class StringUtilities {
     }
   }
 
-  public static final long parseLong(String string) {
+  public static long parseLong(String string) {
     return StringUtilities.parseLongInternal1(string, false);
   }
 
-  public static final long parseLongInternal1(String string, boolean throwException)
+  public static long parseLongInternal1(String string, boolean throwException)
       throws NumberFormatException {
     if (string == null) {
       return 0L;
@@ -720,7 +712,7 @@ public class StringUtilities {
     return StringUtilities.parseLongInternal2(string);
   }
 
-  public static final long parseLongInternal2(String string) throws NumberFormatException {
+  public static long parseLongInternal2(String string) throws NumberFormatException {
     string = NONINTEGER_PATTERN.matcher(string).replaceAll("");
 
     if (string.length() == 0) {
@@ -735,7 +727,7 @@ public class StringUtilities {
     }
   }
 
-  public static final float parseFloat(String string) {
+  public static float parseFloat(String string) {
     if (string == null) {
       return 0.0f;
     }
@@ -758,7 +750,7 @@ public class StringUtilities {
     return Float.parseFloat(string);
   }
 
-  public static final double parseDouble(String string) {
+  public static double parseDouble(String string) {
     if (string == null) {
       return 0.0;
     }
@@ -781,7 +773,7 @@ public class StringUtilities {
     return Double.parseDouble(string);
   }
 
-  public static final String basicTextWrap(String text) {
+  public static String basicTextWrap(String text) {
 
     if (text.length() < 80 || text.startsWith("<html>")) {
       return text;
@@ -816,7 +808,7 @@ public class StringUtilities {
     return result.toString();
   }
 
-  public static final void registerPrepositions(final String text) {
+  public static void registerPrepositions(final String text) {
     Matcher m = StringUtilities.PREPOSITIONS_PATTERN.matcher(text);
     if (!m.find()) {
       return;
@@ -824,7 +816,7 @@ public class StringUtilities {
     StringUtilities.prepositionsMap.put(m.replaceAll("@"), text);
   }
 
-  public static final String lookupPrepositions(final String text) {
+  public static String lookupPrepositions(final String text) {
     Matcher m = StringUtilities.PREPOSITIONS_PATTERN.matcher(text);
     if (!m.find()) {
       return text;
@@ -833,7 +825,7 @@ public class StringUtilities {
     return rv == null ? text : rv;
   }
 
-  public static final String toTitleCase(final String s) {
+  public static String toTitleCase(final String s) {
     boolean found = false;
     char[] chars = s.toLowerCase().toCharArray();
 
@@ -849,7 +841,7 @@ public class StringUtilities {
     return String.valueOf(chars);
   }
 
-  public static final String leetify(final String text) {
+  public static String leetify(final String text) {
     // It makes no sense to leetify character entities, so convert
     // them to UTF-8 characters.
     String decoded = StringUtilities.getEntityDecode(text);
@@ -890,7 +882,7 @@ public class StringUtilities {
     return b.toString();
   }
 
-  public static final boolean isVowel(char letter) {
+  public static boolean isVowel(char letter) {
     switch (Character.toLowerCase(letter)) {
       case 'a':
       case 'e':
@@ -903,7 +895,7 @@ public class StringUtilities {
     }
   }
 
-  public static final int getBracketedId(final String name) {
+  public static int getBracketedId(final String name) {
     if (name.startsWith("[")) {
       int index = name.indexOf("]");
       if (index > 0) {
@@ -916,7 +908,7 @@ public class StringUtilities {
     return -1;
   }
 
-  public static final String removeBracketedId(final String name) {
+  public static String removeBracketedId(final String name) {
     if (name.startsWith("[")) {
       int index = name.indexOf("]");
       if (index > 0) {
